<resources>
    <string name="app_name">cmpt276prj</string>
    <string name="main_menu">Main Menu</string>
    <string name="manage_children">Manage Children</string>
    <string name="add">Add Child</string>
    <string name="add_a_child">Add a child</string>
    <string name="remove">Remove</string>
    <string name="nameofthechild">NameOfTheChild</string>
    <string name="name_to_add">Name to add</string>
    <string name="flip_a_coin_button_text">Flip a Coin</string>
    <string name="timeout_timer_button_text">Timeout Timer</string>
    <string name="help_button_text">Help</string>
    <string name="manage_children_header_text">Manage Children</string>
    <string name="selectionInstructionsTextString">Please choose between heads or tails!</string>
    <string name="exampleChildString">EXAMPLE_CHILD:</string>
    <string name="tails">TAILS</string>
    <string name="heads">HEADS</string>
    <string name="selectionHeads">%1$s selected Heads!</string>
    <string name="selectionTails">%1$s selected Tails!</string>
    <string name="victory">Congrats, you got it right!</string>
    <string name="defeat">Aw, better luck next time!</string>
    <string name="historyButtonString">History</string>
    <string name="coinImageDescription">coin image</string>
    <string name="historyTitleString">HISTORY</string>
    <string name="image_of_flip_result">image of flip result</string>
    <string name="headString">HEADS</string>
    <string name="tailsString">TAILS</string>
    <string name="timeout_timer">Timeout Timer</string>
    <string name="time_duration_mins">Time Duration (mins)</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="custom_duration_mins">Custom duration (mins)</string>
    <string name="please_input_a_whole_number_of_minutes">Please input a whole number of minutes</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="reset">RESET</string>
    <string name="flip">FLIP</string>
    <string name="heads_result">It landed on heads!</string>
    <string name="tails_result">It landed on tails!</string>
    <string name="show_all_history">All History</string>
    <string name="show_current_child_history">Current Child History</string>
    <string name="name_child_edit_text">Name</string>
    <string name="add_child_screen_button_text">Add Child</string>
    <string name="portrait_child_photo">Portrait child photo</string>
    <string name="camera_button_content_description">Camera button</string>
    <string name="gallery_button_content_description">Gallery button</string>
    <string name="save_button_edit_image">Save</string>
    <string name="portrait_of_the_child_edit_screen">Portrait of the child</string>
    <string name="camera_button_edit_screen">Camera button</string>
    <string name="gallery_button_edit_screen">Gallery button</string>
    <string name="portrait_of_the_child_inside_the_list_view_item">Portrait of the child inside the list view item</string>
    <string name="change">Change</string>
    <string name="child_image">child image</string>
    <string name="none">NONE</string>
    <string name="helpActivity_title">The Multi-Purpose Family Assistant</string>
    <string name="helpActivity_description">A multi-functional utility tool that helps families arrange activities for their children in a fun and intuitive way.</string>
    <string name="helpActivity_credits_title">By Team Salmon</string>
    <string name="helpActivity_copyright_title">Copyright</string>
    <string name="helpActivity_credit_content">Daniel Du\n Ethan Yu\n Ivan Pavlyk\n Kevin Tang</string>
    <string name="helpActivity_copyright_content">
        https://pixabay.com/vectors/the-background-background-design-352165/\n
        https://pixabay.com/illustrations/pumpkin-bear-bat-bunny-chicken-5540550/\n
        https://pixabay.com/vectors/sky-clouds-mountains-blue-34536/\n
        https://www.vippng.com/maxp/bRJoxw/\n
        https://www.youtube.com/watch?v=zhtyRiEbnbk\n
        http://soundbible.com/2061-Loud-Alarm-Clock-Buzzer.html\n
        https://pixabay.com/illustrations/portrait-aesthetic-man-mr-2899779/\n
        https://pixabay.com/photos/fantasy-background-image-arch-3645269/\n
        https://www.youtube.com/watch?v=ykbU41xhDrY&amp;ab_channel=VladSpreys\n
        https://pixabay.com/photos/star-points-stains-effect-space-1626550/
    </string>
    <string name="dialog_image_description">Image for task list items</string>
    <string name="task_description">TaskDescription</string>
    <string name="task_name_view">TaskNameView</string>
    <string name="advance_turn_button_text">Advance Turn</string>
    <string name="advance_turn">Advance Turn</string>
    <string name="task_name">Name of Task</string>
    <string name="description_of_task">Description of Task</string>
    <string name="view">View</string>
    <string name="task_holder_name">Task Holder Name</string>
    <string name="time_rate">Time Rate (%)</string>
    <string name="time_100">Time@100%</string>
    <string name="take_breath_button_text">Take Breath</string>
    <string name="choose_number_of_breaths_tv">Choose number of breaths:</string>
    <string name="lets_take_n_number_of_breaths">Lets Take N number of breaths</string>
    <string name="begin_button_text">Begin</string>
    <string name="inhale_btn_text">In</string>
    <string name="done_breathing">Good Job!</string>
    <string name="exhale_btn_text">Out</string>
    <string name="title_take_breath_bar">Take a breath</string>
    <string name="lets_take_breath_text">Lets take </string>
    <string name="breath_text"> breath</string>
    <string name="breaths_text"> breaths</string>
    <string name="breaths_remaining_text"> breaths remaining</string>
    <string name="breath_out_help_text">Release button and breath out</string>
    <string name="inhale_help_text">Inhale and hold the In button!</string>
    <string name="image_view_breath_description">Image of colorful circle</string>
    <string name="quick_portrait_description">Portrait displayed to allow for easier recognition of turn holder</string>
    <string name="flipHistoryPortraitDescription">Shows the portrait of child who made the flip</string>
    <string name="Whose_Turn_Title">Whose Turn</string>
    <string name="No_Task_Alert">Please add a new task_dialog.\n At the bottom right corner \"+\" sign.</string>
    <string name="No_Task_Delete_Alert">Please Add a new task_dialog.\n At the bottom right corner \"+\" sign.</string>
    <string name="No_Child_Alert">Please add a child before adding tasks</string>
    <string name="No_Child_Added_Yet_Alert">No Child Added Yet</string>
    <string name="New_Task_Dialog_Alert">New task_dialog added</string>
    <string name="Task_Dialog_Title">Task</string>
    <string name="OK">OK</string>
    <string name="Name_Text_Front">Its</string>
    <string name="Name_Text_Back">\'s turn</string>
    <string name="timeShow">00:00:00</string>
    <string name="Resume">Resume</string>
    <string name="Pause">Pause</string>
    <string name="TimeUp">Time up</string>
    <string name="PracticalParent">Practical Parent</string>
    <string name="Timeup">Time up</string>
    <string name="stopalarm">Time Up! Please click here to stop alarm</string>
    <string name="Timeout">Timeout Timer</string>
    <string name="save">save</string>
    <string name="Position">Position</string>
    <string name="CHANNEL">CHANNEL_ID</string>
    <string name="android">android.resource://</string>
    <string name="slash">/</string>
    <string name="channelName">Channel Name</string>
    <string name="channelDesc">Channel Description</string>
    <string name="channelid">CHANNEL_ID</string>
    <string name="done_text_timeout">done</string>
    <string name="start_countdown_text_timeout">Please start countdown first</string>
    <string name="startup_timer_text_timeout">00:00:00</string>
    <string name="pause_text_timeout">Pause</string>
    <string name="resume_text_timeout">Resume</string>
    <string name="add_child_text_addactivity">Add a child</string>
    <string name="added_success_text_addactivity">Added child successfully</string>
    <string name="input_valid_name_text_addactivity">Please input valid name!</string>
    <string name="select_portrait_text_addactivity">Select portrait</string>
    <string name="camera_not_available_text_addactivity">Camera not available</string>
    <string name="couldnot_insert_text_addactivity">Couldn\'t insert image</string>
    <string name="bar_title_text_managechildren">Manage Children</string>
    <string name="alert_dialog_text_managechildren">Edit the selected name:</string>
    <string name="bar_title_text_editchildportrait">Edit a portrait</string>
    <string name="toast_success_add_text_editchildportrait">Edited the portrait successfully</string>
    <string name="activity_for_result_text_editchildportrait">Select portrait</string>
    <string name="toast_camera_fail_text_editchildportrait">Camera not available</string>
    <string name="toast_fail_insert_text_editchildportrait">Couldn\'t insert image</string>
    <string name="bar_text_add_task">Task Details</string>
    <string name="bar_text_next_flip">Choose next flipper</string>
    <string name="toast_success_next_flip_text_coin_flip">Successfully selected child that will flip next</string>
    <string name="bar_text_delete_task">Select one task_dialog you want to delete.</string>
    <string name="bar_text_edit_task">Edit The task_dialog you chose.</string>
    <string name="bar_text_help">Help Screen</string>
    <string-array name="spinner_items">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>