<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TimeoutActivity"
    android:background="@drawable/sky_image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="@string/timeout_timer"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="15dp"
                android:text="@string/time_duration_mins"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                tools:ignore="NestedWeights,RtlSymmetry" />

            <Spinner
                android:id="@+id/duration"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:background="@drawable/custom_circle_viw"
                    android:gravity="center"
                    android:text="@string/_00_00_00"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="50sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_duration_mins"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/inputTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/please_input_a_whole_number_of_minutes"
                android:inputType="numberSigned"
                android:textColor="#F4F4F4"
                android:textColorHint="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/start"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start" />


            <Button
                android:id="@+id/pause"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pause" />

            <Button
                android:id="@+id/cancel"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>