<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@drawable/the_background_cartoon">

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="173dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_header"
        android:gravity="center"
        android:text="@string/main_menu"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonManageChildren"
        android:layout_width="203dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/menu_buttons"
        android:text="@string/manage_children"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMain" />

    <Button
        android:id="@+id/buttonFlipCoin"
        android:layout_width="203dp"
        android:layout_height="73dp"
        android:background="@drawable/menu_buttons"
        android:layout_marginTop="32dp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:text="@string/flip_a_coin_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonManageChildren" />

    <Button
        android:id="@+id/buttonTimeout"
        android:layout_width="203dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:background="@drawable/menu_buttons"
        android:textAllCaps="false"
        android:text="@string/timeout_timer_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFlipCoin" />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="203dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:background="@drawable/menu_buttons"
        android:textAllCaps="false"
        android:text="@string/help_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTimeout" />

    <Button
        android:id="@+id/whoseturn"
        android:layout_width="203dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/menu_buttons"
        android:text="Whose Turn"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHelp" />

    <Button
        android:id="@+id/btnTakeBreath"
        android:layout_width="203dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        android:text="@string/take_breath_button_text"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:background="@drawable/menu_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whoseturn" />
</androidx.constraintlayout.widget.ConstraintLayout>


