<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fantasy_background"
    tools:context=".ui.EditChildPortraitActivity">

    <ImageView
        android:id="@+id/imageViewPortraitEdit"
        android:layout_width="159dp"
        android:layout_height="155dp"
        android:layout_marginTop="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/portrait_of_the_child_edit_screen" />

    <ImageButton
        android:id="@+id/imageButtonPortraitEditCamera"
        android:layout_width="74dp"
        android:layout_height="77dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#8BC34A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPortraitEdit"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/camera_button_edit_screen" />

    <ImageButton
        android:id="@+id/imageButtonPortraiteditGallery"
        android:layout_width="71dp"
        android:layout_height="77dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="#8BC34A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPortraitEdit"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/gallery_button_edit_screen" />

    <Button
        android:id="@+id/buttonSaveChildEditScreen"
        android:layout_width="106dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/menu_buttons"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:text="@string/save_button_edit_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonPortraitEditCamera" />
</androidx.constraintlayout.widget.ConstraintLayout>